update 4b plot, explore corelation separately

--- a/HDDM/Run_models_1.ipynb
+++ b/HDDM/Run_models_1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note:\n",
+    "This script is for parallel processing the HDDM processing for '1a', '1b', '1c', '2', and '6a', which share the same experimental design."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook is running: /home/hcp4715/miniconda3/envs/py_ddm/bin/python\n",
+      "Notebook is running: /home/hcp4715/miniconda3/envs/hddm/bin/python\n",
       "The current HDDM version is 3.7.7\n",
       "The current HDDM version is 0.8.0\n",
       "The current IPython version is 7.13.0\n"
@@ -19,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/hcp4715/miniconda3/envs/py_ddm/lib/python3.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated since IPython 4.0. You should import from ipyparallel instead.\n",
+      "/home/hcp4715/miniconda3/envs/hddm/lib/python3.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated since IPython 4.0. You should import from ipyparallel instead.\n",
       "  \"You should import from ipyparallel instead.\", ShimWarning)\n"
      ]
     }
