--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -37,7 +37,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={Positive bias in perceptual matching may reflect an spontaneous self-referential processing},
+  pdftitle={Positivity bias in perceptual matching may reflect a spontaneous self-referential processing},
   pdflang={en-EN},
   pdfkeywords={Perceptual decision-making, Self, positive bias, morality},
   hidelinks,
@@ -106,7 +106,7 @@
   {\section*{\normalfont\normalsize\abstractname}}
   {}{\typeout{Failed to patch abstract.}}
 \makeatother
-\shorttitle{Positive-bias as the spontaneous self-referential processing}
+\shorttitle{Positivity as spontaneous self-referential processing}
 \author{Hu Chuan-Peng\textsuperscript{1,2}, Kaiping Peng\textsuperscript{1}, \& Jie Sui\textsuperscript{1,3}}
 \affiliation{
 \vspace{0.5cm}
@@ -138,12 +138,12 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Lan
   \usepackage[shorthands=off,main=english]{babel}
 \fi
 
-\title{Positive bias in perceptual matching may reflect an spontaneous self-referential processing}
+\title{Positivity bias in perceptual matching may reflect a spontaneous self-referential processing}
 
 \date{}
 
 \abstract{
-To navigate in a complex social world, individual has learnt to prioritize valuable information. Previous studies suggested the moral related stimuli was prioritized (Anderson, Siegel, et al., 2011, Science; Gantman \& Van Bavel, 2014, Cognition). Using social associative learning paradigm, we found that when geometric shapes, without soical meaning, were associated with different moral valence (morally good, neutral, or bad), the shapes that associated with positive moral valence were prioritized in moral matching task. This patterns of results were robust across different procedures. Further, we tested whether this positive effect was modulated by self-relevance by manipulating the self-referential explicitly and found that the positive bias showed a large effect when positive valued stimuli were related to the self. This effect exist also when the self related information were presented as a task-irrelevant information. We also tested the specificity of the positive valence and found that this effect was not limited to moral domain. Interestingly, the better performance in reaction time is not correpsonding to self-rated psychological distance between self and a morally good-person, but with distance between self and morall bad-person. These results may suggest that our participants (College students in two different cities in China) have a positive moral self bias in perceptual processing, which drive the facilitated processing of morally good stimuli because of the spontaneous self-referential processing, and this trendency is not correlated with explicit rating of moral self.
+To navigate in a complex social world, individual has learnt to prioritize valuable information. Previous studies suggested the moral related stimuli was prioritized (Anderson, Siegel, et al., 2011, Science; Gantman \& Van Bavel, 2014, Cognition). Using social associative learning paradigm, we found that when geometric shapes, without soical meaning, were associated with different moral valence (morally good, neutral, or bad), the shapes that associated with positive moral valence were prioritized in moral matching task. This patterns of results were robust across different procedures. Further, we tested whether this positive effect was modulated by self-relevance by manipulating the self-referential explicitly and found that the positive bias showed a large effect when positive valued stimuli were related to the self. This effect exist also when the self related information were presented as a task-irrelevant information. We also tested the specificity of the positive valence and found that this effect was not limited to moral domain. Exploratory analyses on task-questionnaire relationship found that moral self-image score (how closely one feel they are to the ideal moral image of themselves) is positively correlated to the \emph{d'} of morally positive condition in singal detection and the drift rate using DDM, while the self-esteem is negatively correlated with \emph{d'} of neutral and morally negative conditions. These results suggest that the positive self prioritzation in perceptual decision-making may reflect \ldots{}
 }
 
 \begin{document}
@@ -176,7 +176,7 @@ All participant received informed consent and compensated for their time. These 
 
 This series of experiments started to test the effect of instantly acquired moral valence on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
 
-The experiment 1a, 1b, 1c, 2, and 6a shared a 2 (matchness: matched vs.~mismatched) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Experiment 1a was the first one of the whole series studies and 1b, 1c, and 2 were conducted to exclude the potential confounding factors. More specifically, experiment 1b used different Chinese words as label to test whether the effect only occured with certain familiar words. Experiment 1c manipulated the moral valence indirectly: participants first learnt to associate different moral behaviors with different neutral names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
+The experiment 1a, 1b, 1c, 2, and 6a shared a 2 (matchness: matched vs.~mismatched) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Experiment 1a was the first one of the whole series studies and 1b, 1c, and 2 were conducted to exclude the potential confounding factors. More specifically, experiment 1b used different Chinese words as label to test whether the effect only occurred with certain familiar words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different neutral names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
 For experiment 3a, 3b, 4a, 4b, 6b, 7a, and 7b, we included self-relevance as another within-subject variable in the experimental design. For example, the experiment 3a directly extend the design of experiment 1a into a 2 (matchness: matched vs.~mismatched) by 2 (reference: self vs.~other) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). The experiment 6b was an EEG experiment extended from experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different blocks: in the self-referential blocks, they only response to good-self, neutral-self, and bad-self, with half of the trials was matched and half was not; for the other-reference blocks, they only responded to good-other, neutral-other, and bad-other. Experiment 7a and 7b were designed to test the cross task robustness of the effect we observed in the aforementioned experiments (Hu et al., 2020), and the matching task in these two experiments shared the same design with experiment 3a, only with few conditions for moral valence. We only used two conditions of moral valence, i.e., good vs.~bad, in experiment 7a and 7b because we found that the neutral and bad conditions constantly show non-significant results.
 
@@ -232,13 +232,27 @@ Exp\_7b & 2018 & 5 & 46 (42) & behav & 2 * 2 * 2 & explicit & words & Simultaneo
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
 
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. To have a better overview of the effect reported in this series experiment, we reported the synthesized results in the main text and individual experiment in supplementary materials.
 
-The raw data were pre-processed using the \texttt{tidyverse} package of r, in which we excluded the practicing trials, invalid trials of each participants, and invalid participant, if there was any. Individual experiment's results were analyzed as in Sui et al. (2012), see supplementary materials. More specifically, we analyzed the accuracy performance using a signal detection approach, in which the performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of \emph{d'}. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The \emph{d'} were then analyzed using repeated measures analyses of variance (repeated measures ANOVA). The reaction times of accurate trials were also analyzed using repeated measures ANOVA. To control the false positive rate when conducting the post-hoc comparisons, we used Bonferroni correction. See supplementary materials for the results of each experiment's method and results, which included the significance test results, effect size (Bakeman, 2005; Lakens, 2013), and Bayes factor calculated by JASP (Hu, Kong, Wagenmakers, Ly, \& Peng, 2018; Wagenmakers et al., 2018).
+\hypertarget{analysis-of-individual-study}{%
+\subsubsection{Analysis of individual study}\label{analysis-of-individual-study}}
 
-To have a better estimation of the effect size, we reported the synthesized results in five parts: valence effect, explicit interaction between valence and self-relevance, implicit interaction between valence and self-relevance, specificity of valence effect, and behavior-questionnaire correlation analysis.
+The individual experiment's results were reported in supplementary materials. We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to exclude the practicing trials, invalid trials of each participants, and invalid participants, if there were any, in the raw data.
 
-For the first two parts, we synthesized results from individual results using mini-meta-analysis (Goh, Hall, \& Rosenthal, 2016). The Mini meta-analyses were carried out by using the \texttt{metafor} package (Viechtbauer, 2010). We first calculated the mean of \emph{d}' and RT of each condition for each participant, then calculate the effect size (Cohen's \emph{d}) and variance of the effect size for all contrast we interested: Good v. Bad, Good v. Neutral, and Neutral v. Bad for the effect of valence, and self vs.~other for the effect of self-relevance. Cohen's \emph{d} and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
+Results of each experiment were analyzed as in Sui et al. (2012). That is, the accuracy performance using a signal detection approach, in which the performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of \(d'\) . Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). For the reaction times (RTs), only RTs of accurate trials were analyzed.
+
+Both signal detection theory analysis of accuracy and RTs were analyzed in Frequentists' approach and Bayesian approach. In the Frequentists' approach, we calculated the \(d'\) using Maximum Likelihood approach and then subjected the \(d'\) estimated from each participant to repeated measures analyses of variance (repeated measures ANOVA), via \texttt{afex} {[}{]}; we used the mean RTs of each participant in each condition and subject these mean value to repeated measures ANOVA too. We reported the results from significance test and effect sizes (including 95\% confidence intervals). To control the false positive rate when conducting the post-hoc comparisons, we used Bonferroni correction.
+
+In the Bayesian approach, we used \texttt{brms} (Bürkner, 2017, @(Bürkner 2017; Carpenter et al., 2017) to implement the Bayesian hierarchical generalized linear model to estimate the effect of valence and self-referential. See supplementary materials for the results of each experiment's method and results.
+
+Finally, we also explored the psychological processes during the perceptual decision-making using the drift-diffusion model (DDM). We used HDDM (Wiecki, Sofer, \& Frank, 2013) for this purpose.
+
+\hypertarget{synthesized-results}{%
+\subsubsection{Synthesized results}\label{synthesized-results}}
+
+We reported the synthesized results from the experiments, because many of them shared the similar experimental design. We reported the results in five parts: valence effect, explicit interaction between valence and self-relevance, implicit interaction between valence and self-relevance, specificity of valence effect, and behavior-questionnaire correlation.
+
+For the first two parts, we reported the synthesized results from Frequestist's approach(mini-meta-analysis, Goh, Hall, \& Rosenthal, 2016). The mini meta-analyses were carried out by using \texttt{metafor} package (Viechtbauer, 2010). We first calculated the mean of \(d'\) and RT of each condition for each participant, then calculate the effect size (Cohen's \(d\) ) and variance of the effect size for all contrast we interested: Good v. Bad, Good v. Neutral, and Bad v. Neutral for the effect of valence, and self vs.~other for the effect of self-relevance. Cohen's \(d\) and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
 
 \[d = \frac {(M_{1} - M_{2})}{\sqrt {(sd_{1}^2 + sd_{2}^2) - 2rsd_{1}sd_{2}}}  \sqrt {2(1-r)}\]
 
@@ -246,12 +260,12 @@ For the first two parts, we synthesized results from individual results using mi
 
 \(M_1\) is the mean of the first condition, \(sd_1\) is the standard deviation of the first condition, while \(M_2\) is the mean of the second condition, \(sd_2\) is the standard deviation of the second condition. \(r\) is the correlation coefficient between data from first and second condition. \(n\) is the number of data point (in our case the number of participants included in our research).
 
-The effect size from each experiment were then synthesized by random effect model using \texttt{metafor}. Note that to avoid the cases that some participants participated more than one experiments, we inspected the all available information of participants and only included participants' results from their first participation. As mentioned above, 24 participants were intentionally recruited to participate both exp 1a and exp 2, we only included their results from exp 1a in the meta-analysis.
+The effect size from each experiment were then synthesized by random effect model using \texttt{metafor} (Viechtbauer, 2010). Note that to avoid the cases that some participants participated more than one experiments, we inspected the all available information of participants and only included participants' results from their first participation. As mentioned above, 24 participants were intentionally recruited to participate both exp 1a and exp 2, we only included their results from experiment 1a in the meta-analysis.
 
 \hypertarget{valence-effect}{%
 \subsubsection{Valence effect}\label{valence-effect}}
 
-We synthesized effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5 and 6a for the valence effect. We reported the synthesized the effect across all experiments that tested the valence effect, using the mini meta-analysis approach.
+We synthesized effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5 and 6a for the valence effect. We reported the synthesized the effect across all experiments that tested the valence effect, using the mini meta-analysis approach (Goh et al., 2016).
 
 \hypertarget{explicit-interaction-between-valence-and-self-relevance}{%
 \subsubsection{Explicit interaction between Valence and self-relevance}\label{explicit-interaction-between-valence-and-self-relevance}}
@@ -261,7 +275,7 @@ The results from experiment 3a, 3b, 6b, 7a, and 7b. These experiments explicitly
 \hypertarget{implicit-interaction-between-valence-and-self-relevance}{%
 \subsubsection{Implicit interaction between valence and self-relevance}\label{implicit-interaction-between-valence-and-self-relevance}}
 
-In the third part, we examined the change of effect size brought by change of design, with a focus on 4a and 4b, which were designed to examine the implicit effect of the interaction between moral valence and self-referential processing. We are interested in one particular question: will self-referential and morally positive valence had a mutual facilitation effect. That is, when moral valence (experiment 4a) or self-referential (experiment 4a) was presented as task-irrelevant stimuli, whether they would facilitate self-referential or valence effect on perceptual decision-making. For experiment 4a, we report the comparisons between different valence conditions under the self-referential task, not the other-referential task; for experiment 4b, we reported the comparison between the self- vs.~other-referential conditions for positive moral condition, not for the neutral or negative conditions. Note that the results were also analyzed in a standard repeated measure ANOVAs (see supplementary materials).
+In the third part, we focused on experiment 4a and 4b, which were designed to examine the implicit effect of the interaction between moral valence and self-referential processing. We are interested in one particular question: will self-referential and morally positive valence had a mutual facilitation effect. That is, when moral valence (experiment 4a) or self-referential (experiment 4a) was presented as task-irrelevant stimuli, whether they would facilitate self-referential or valence effect on perceptual decision-making. For experiment 4a, we reported the comparisons between different valence conditions under the self-referential task and other-referential task. For experiment 4b, we first calculated the effect of valence for both self- and other-referential conditions and then compared the effect size of these three contrast from self-referential condition and from other-referential condition. Note that the results were also analyzed in a standard repeated measure ANOVA (see supplementary materials).
 
 \hypertarget{specificity-of-the-valence-effect}{%
 \subsubsection{Specificity of the valence effect}\label{specificity-of-the-valence-effect}}
@@ -272,10 +286,19 @@ In this part, we reported the data from experiment 5, which included positive, n
 \subsubsection{Behavior-Questionnaire correlation}\label{behavior-questionnaire-correlation}}
 
 Finally, we explored correlation between results from behavioral results and self-reported measures.
-For the behavioral task part, we derived different indices. First, we used the mean of the RT data from each participants of each condition. Second, we used drift diffusion model to estimate four parameters of DDM for each participants.
-The DDM analyses were finished by HDDM(Wiecki, Sofer, \& Frank, 2013), as reported in Hu et al. (2020). That is, we used the response code approach, matched response were coded as 1 and mismatched responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses.
+For the behavioral task part, we derived different indices. First, we used the mean of the RT and \emph{d'} from each participants of each condition. Second, we used three parameters from drift diffusion model. The mean value of each parameter's posterior were used. The DDM analyses were finished by HDDM(Wiecki et al., 2013), as reported in Hu et al. (2020). That is, we used the response code approach, matched response were coded as 1 and mismatched responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses.
 
 For the questionnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires: self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included. Note that all data were reported in (Liu et al., 2020).
+
+For the behavioral task part, we derived different indices. First, we used the mean of the RT data from each participants of each condition. Second, we used three parameters of drift diffusion model of each participant as estimated by HDDM. Third, we calculated the differences between different conditions (valence effect: good-self vs.~bad-self, good-self vs.~neutral-self, bad-self vs.~neutral-self; good-other vs.~bad-other, good-other vs.~neutral-other, bad-other vs.~neutral-other; Self-reference effect: good-self vs.~good-other, neutral-self vs.~neutral-other, bad-self vs.~bad-other), as indexed by Cohen's \(d\) and standard error (SE) of Cohen's \(d\).
+\[ Cohen's \space d_{z} = \frac {(M_{1} - M_{2})} {\sqrt{(SD_{1}^2 + SD_{2}^2)/2}}\]
+Given that the task difficulty were different across experiments, we z-transformed all these indices so that they become unit-free.
+
+The DDM analyses were finished by HDDM, as reported in Hu et al. (2020). That is, we used the response code approach, matched response were coded as 1 and mismatched responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses. However, because the starting point is only related to response (match vs.~non-match) but not the valence of the stimuli, we didn't included it in correlation analysis.
+
+For the questionnaire part, we are interested in those questionnaires related to morality: self-rated distance between different person, self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included.
+
+We used Pearson correlation analysis to quantify the correlation. For those correlation that is significant (\(p < 0.05\)), we further tested the robustness of the correlation using bootstrap.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
@@ -317,8 +340,14 @@ For experiment 4a, when self-reference was the target and moral valence was task
 
 \begin{figure}
 \centering
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4b-effect-1.pdf}
-\caption{\label{fig:plot-exp4b-effect}Effect size (Cohen's \emph{d}) of Valence in Exp4b.}
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4b-effect-1-1.pdf}
+\caption{\label{fig:plot-exp4b-effect-1}Effect size (Cohen's \emph{d}) of Valence in Exp4b.}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4b-effect-2-1.pdf}
+\caption{\label{fig:plot-exp4b-effect-2}Effect size (Cohen's \emph{d}) of Valence in Exp4b.}
 \end{figure}
 
 \begin{figure}
@@ -327,9 +356,9 @@ For experiment 4a, when self-reference was the target and moral valence was task
 \caption{\label{fig:plot-exp4b-diff-diff}Effect size (Cohen's \emph{d}) of Valence in Exp4b.}
 \end{figure}
 
-For experiment 4b, when valence was the target and the identity was task-irrelevant, we found a strong valence effect (see supplementary results and Figure \ref{fig:plot-exp4b-effect}).
+For experiment 4b, when valence was the target and the identity was task-irrelevant, we found a strong valence effect (see supplementary results and Figure \ref{fig:plot-exp4b-effect-1}, Figure \ref{fig:plot-exp4b-effect-2}).
 
-In this experiment, the advantage of good-self condition can only be disentangled by comparing the self-referential and other-referential conditions. Therefore, we calculated the differences between the valence effect under self-referential and other referential conditions and used the weighted variance as the variance of this differences. We found this modulation effect on RT. The valence effect of RT was stronger in self-referential than other-referential for the Good vs.~Neutral condition (-0.27 \(\pm\) 0.01), while the size of the other effect's CI included zero, suggestion those effects didn't differ from zero. See Figure \ref{fig:plot-exp4b-diff-diff}.
+In this experiment, the advantage of good-self condition can only be disentangled by comparing the self-referential and other-referential conditions. Therefore, we calculated the differences between the valence effect under self-referential and other referential conditions and used the weighted variance as the variance of this differences. We found this modulation effect on RT. The valence effect of RT was stronger in self-referential than other-referential for the Good vs.~Neutral condition (-0.33 \(\pm\) 0.01), and to a less extent the Good vs.~Bad condition (-0.17 \(\pm\) 0.01). While the size of the other effect's CI included zero, suggestion those effects didn't differ from zero. See Figure \ref{fig:plot-exp4b-diff-diff}.
 
 \hypertarget{specificity-of-valence-effect}{%
 \subsection{Specificity of valence effect}\label{specificity-of-valence-effect}}
@@ -337,7 +366,7 @@ In this experiment, the advantage of good-self condition can only be disentangle
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp5-effect-1.pdf}
-\caption{\label{fig:plot-exp5-effect}Effect size (Cohen's \emph{d}) of Valence in Exp4b.}
+\caption{\label{fig:plot-exp5-effect}Effect size (Cohen's \emph{d}) of Valence in Exp5.}
 \end{figure}
 
 In this part, we analyzed the results from experiment 5, which included positive, neutral, and negative valence from four different domains: morality, emotion, aesthetics of human, and aesthetics of scene. We found interaction between valence and domain for both \emph{d} prime and RT (matched trials). A common pattern appeared in all four domains: each domain showed a binary results instead of gradient on both \emph{d} prime and RT. For morality, aesthetics of human, and aesthetics of scene, the positive conditions had advantages over both neutral and negative conditions (greater \emph{d} prime and faster RT), and neutral and negative conditions didn't differ from each other. But for the emotional stimuli, it was the positive and neutral had advantage over negative conditions, while positive and neutral conditions were not significantly different. See supplementary materials for detailed statistics. Also note that the effect size in moral domain is smaller than the aesthetic domains (beauty of people and beauty of scene). See Figure \ref{fig:plot-exp5-effect}.
@@ -347,20 +376,10 @@ In this part, we analyzed the results from experiment 5, which included positive
 
 The reliability of questionnaires can be found in (Liu et al., 2020). Then we calculated the correlation between the data from behavioral task and the questionnaire data.
 
-For the behavioral task part, we derived different indices. First, we used the mean of the RT data from each participants of each condition. Second, we used three parameters of drift diffusion model of each participant as estimated by HDDM. Third, we calculated the differences between different conditions (valence effect: good-self vs.~bad-self, good-self vs.~neutral-self, bad-self vs.~neutral-self; good-other vs.~bad-other, good-other vs.~neutral-other, bad-other vs.~neutral-other; Self-reference effect: good-self vs.~good-other, neutral-self vs.~neutral-other, bad-self vs.~bad-other), as indexed by Cohen's \(d\) and standard error (SE) of Cohen's \(d\).
-\[ Cohen's \space d_{z} = \frac {(M_{1} - M_{2})} {\sqrt{(SD_{1}^2 + SD_{2}^2)/2}}\]
-Given that the task difficulty were different across experiments, we z-transformed all these indices so that they become unit-free.
-
-The DDM analyses were finished by HDDM, as reported in Hu et al. (2020). That is, we used the response code approach, matched response were coded as 1 and mismatched responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses. However, because the starting point is only related to response (match vs.~non-match) but not the valence of the stimuli, we didn't included it in correlation analysis.
-
-For the questionnaire part, we are interested in those questionnaires related to morality: self-rated distance between different person, self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included.
-
-We used Pearson correlation analysis to quantify the correlation. For those correlation that is significant (\(p < 0.05\)), we further tested the robustness of the correlation using bootstrap.
-
 We focused on the task-questionnaire correlation, the results revealed that the score from three questionnaire are related to behavioral responses data.
-First, the moral self image is positively correlated with the \(d'\) (\(r = 0.24\), 95\% CI {[}0.065 0.398{]}) and the drift rate (\(r = 0.226\), 95\% CI {[}0.046 0.385{]}) of the morally good condition. See the left part of Figure \ref{fig:plot-corr-1}.
+First, the external moral identity is positively correlated with boundary separation of moral good condition, \(r = 0.194\), 95\% CI {[}0.023 0.350{]}); the moral self image is positively correlated with the drift rate (\(r = 0.191\), 95\% CI {[}-0.016 0.354{]}) of the morally good condition. See the left and middle part of Figure \ref{fig:plot-corr-1}.
 
-Second, we found the self esteem score was negative correlated with the \(d'\) of neutral conditions (\(r = -0.151\), 95\% CI {[}-0.261 -0.039{]}) and the bad conditions (\(r = -0.167\), 95\% CI {[}-0.314 -0.014{]}). See the right part of Figure \ref{fig:plot-corr-1}.
+Second, we found the personal distance between self and good is positively correlated with the boundary separation of neutral condition and the self-neutral distance is negatively correlated with the boundary separation of neutral condition.
 
 \begin{figure}
 \centering
@@ -368,7 +387,11 @@ Second, we found the self esteem score was negative correlated with the \(d'\) o
 \caption{\label{fig:plot-corr-1}Correlation between moral self-image, self esteem, and behavior}
 \end{figure}
 
-Third, the external moral identity score was correlated with the drift rate of neutral condition, the boundary of good condition, difference between good and neutral, and RT of neutral condition. Moral specifically, the correlation between external moral identity and the drift rate of neutral condition: \(r = -0.231\), 95\% CI {[}-0.402 -0.028{]}; the correlation between external moral identity and boundary separation of good condition: \(r = 0.189\), 95\% CI {[}0.0285 0.331{]}; the correlation between external moral identity and the differences between good and neutral: \(r = -0.213\), 95\% CI{[}-0.398 -0.005{]}; the correlation between external moral identity and reaction time of Neutral condition: \(r = 0.202\), 95\% CI{[}0.004 0.382{]}. See Figure \ref{fig:plot-corr-2}.
+Third, we found the self esteem score was negative correlated with the \(d'\) of bad conditions (\(r = -0.16\), 95\% CI {[}-0.277 -0.038{]}) and the neutral conditions (\(r = -.197\), 95\% CI {[}-0.348 -0.026{]}). See Figure \ref{fig:plot-corr-2}.
+
+We also explored the correlation between behavioral data and questionnaire scores separately for experiments with and without self-referential. For experiments without self-referential (Valence effect), we found the personal distance between Good-person and self is positively correlated with boundary separation of good conditions, r = 0.292, 95\% {[}0.071 0.485{]}. also personal distance between the bad and neutral person is positively correlated with non-responding time of bad and neutral conditions, r = 0.249, 0.233, respectively.
+
+For experiments with self-referential (Valence effect for the self), we found self-esteem is negatively correlated with d prime of neutral condition, r = -0.272, {[}-0.468 -0.052{]}, the self-good distance is positively correlated with d prime for Bad condition, r = 0.185, 95\%CI{[}0.004 0.354{]}.
 
 \begin{figure}
 \centering
@@ -387,11 +410,14 @@ Third, the external moral identity score was correlated with the drift rate of n
 \setlength{\leftskip}{0.5in}
 
 \hypertarget{refs}{}
-\leavevmode\hypertarget{ref-Bakeman_2015_eff_size}{}%
-Bakeman, R. (2005). Recommended effect size statistics for repeated measures designs. \emph{Behavior Research Methods}, \emph{37}(3), 379--384. Journal Article. \url{https://doi.org/10.3758/BF03192707}
-
 \leavevmode\hypertarget{ref-Brainard_1997}{}%
 Brainard, D. H. (1997). The psychophysics toolbox. \emph{Spatial Vision}, \emph{10}(4), 433--436. Journal Article.
+
+\leavevmode\hypertarget{ref-Buxfcrkner_2017}{}%
+Bürkner, P.-C. (2017). Brms: An r package for bayesian multilevel models using stan. \emph{Journal of Statistical Software; Vol 1, Issue 1 (2017)}. Journal Article. Retrieved from \url{https://www.jstatsoft.org/v080/i01\%0Ahttp://dx.doi.org/10.18637/jss.v080.i01}
+
+\leavevmode\hypertarget{ref-Carpenter_2017_stan}{}%
+Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M., \ldots{} Riddell, A. (2017). Stan: A probabilistic programming language. \emph{Journal of Statistical Software}, \emph{76}(1). Journal Article. \url{https://doi.org/10.18637/jss.v076.i01}
 
 \leavevmode\hypertarget{ref-Cooper_2009_handbook}{}%
 Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of research synthesis and meta-analysis} (2nd ed.). Book, New York: Sage.
@@ -399,14 +425,8 @@ Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of res
 \leavevmode\hypertarget{ref-Goh_2016_mini}{}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. Journal Article. \url{https://doi.org/10.1111/spc3.12267}
 
-\leavevmode\hypertarget{ref-Hu_2018_JASP}{}%
-Hu, C.-P., Kong, X.-Z., Wagenmakers, E.-J., Ly, A., \& Peng, K. (2018). Bayes factor and its implementation in jasp: A practical primer (in chinese). \emph{Advances in Psychological Science}, \emph{26}(6), 951--965. Journal Article. \url{https://doi.org/10.3724/SP.J.1042.2018.00951}
-
 \leavevmode\hypertarget{ref-Hu_2020_GoodSelf}{}%
 Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valence influence self-prioritization during perceptual decision-making? \emph{Collabra: Psychology}, \emph{6}(1), 20. Journal Article. \url{https://doi.org/10.1525/collabra.301}
-
-\leavevmode\hypertarget{ref-Lakens_2013}{}%
-Lakens, D. (2013). Calculating and reporting effect sizes to facilitate cumulative science: A practical primer for t-tests and anovas. \emph{Frontiers in Psychology}, \emph{4}, 863. Journal Article. \url{https://doi.org/10.3389/fpsyg.2013.00863}
 
 \leavevmode\hypertarget{ref-Liu_2020_JOPD}{}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. Journal Article. \url{https://doi.org/10.5334/jopd.49/}
@@ -419,9 +439,6 @@ Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Co
 
 \leavevmode\hypertarget{ref-Sui_2012_JEPHPP}{}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. Journal Article. \url{https://doi.org/10.1037/a0029792}
-
-\leavevmode\hypertarget{ref-Wagenmakers_2018_JASP}{}%
-Wagenmakers, E.-J., Love, J., Marsman, M., Jamil, T., Ly, A., Verhagen, J., \ldots{} Morey, R. D. (2018). Bayesian inference for psychology. Part ii: Example applications with jasp. \emph{Psychonomic Bulletin \& Review}, \emph{25}(1), 58--76. Journal Article. \url{https://doi.org/10.3758/s13423-017-1323-7}
 
 \leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
 Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). HDDM: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
